<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintVertical_bias="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo"
            app:tint="@color/apnapay_purple"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/apnapay_purple"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:text="@string/log_in_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:backgroundTint="@color/apnapay_purple"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/btnSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up_text"
        android:textColor="@color/apnapay_purple"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:backgroundTint="@color/white"
        app:strokeWidth="1dp"
        app:strokeColor="@color/border_light"
        app:layout_constraintBottom_toTopOf="@id/dividerLayout"
        android:layout_marginBottom="32dp" />

    <LinearLayout
        android:id="@+id/dividerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toTopOf="@id/btnGoogle"
        android:layout_marginBottom="32dp">

        <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1.5dp" android:background="@color/border_light"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Or" android:textColor="@color/text_muted" android:layout_marginHorizontal="16dp"/>
        <View android:layout_width="0dp" android:layout_weight="1" android:layout_height="1.5dp" android:background="@color/border_light"/>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_social_button"
        android:text="@string/continue_with_google"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:drawableStart="@drawable/google"
        android:paddingStart="24dp"
        android:paddingEnd="48dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        android:elevation="0dp"
        app:elevation="0dp"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFacebook"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="@drawable/bg_social_button"
        android:text="@string/continue_with_facebook"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:drawableStart="@drawable/facebook"
        android:elevation="0dp"
        app:elevation="0dp"
        android:stateListAnimator="@null"
        android:paddingStart="24dp"
        android:paddingEnd="48dp"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>